# time-series-with-Konrad

./: .gitignore  README.md  helper-m04.ipynb  m01-the-basics.ipynb  m02-smoothing-methods-refactored.ipynb  m02-smoothing-methods.ipynb  m03-arima-family.ipynb  m04-hierarchical-forecasting.ipynb  m05-survival-analysis.ipynb  m06-validation-methods.ipynb  pyproject.toml  ts-8-hierarchical-time-series.ipynb
data/: m04_sales_data_prepared.csv
v1/: ts-10-validation-methods-for-time-series.ipynb  ts-1a-smoothing-methods.ipynb
v1 copy/: ts-0-the-basics.ipynb  ts-2-linear-vision (1).ipynb  ts-3-time-series-for-finance.ipynb
